<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customBackgroundColor"
    android:padding="10dp"
    tools:context=".activity.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txtTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnTestTextPass"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestTextPass" />

    <Button
        android:id="@+id/btnTestTextPass"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTestPattern"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
        app:layout_constraintRight_toLeftOf="@id/btnChangeTextPass"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangeTextPass"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/btnTestTextPass"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestTextPass" />

    <TextView
        android:id="@+id/txtPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pattern"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnTestPattern"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestPattern" />

    <Button
        android:id="@+id/btnTestPattern"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTestBehavior"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
        app:layout_constraintRight_toLeftOf="@id/btnChangePattern"
        app:layout_constraintTop_toBottomOf="@+id/btnTestTextPass" />

    <Button
        android:id="@+id/btnChangePattern"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/btnTestPattern"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestPattern" />

    <TextView
        android:id="@+id/txtBehavior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/behavior"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnTestBehavior"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestBehavior" />

    <Button
        android:id="@+id/btnTestBehavior"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTestFingerprint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
        app:layout_constraintRight_toLeftOf="@id/btnChangeBehavior"
        app:layout_constraintTop_toBottomOf="@+id/btnTestPattern" />

    <Button
        android:id="@+id/btnChangeBehavior"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/btnTestBehavior"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestBehavior" />

    <TextView
        android:id="@+id/txtFingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnTestFingerprint"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestFingerprint" />

    <Button
        android:id="@+id/btnTestFingerprint"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTestPicture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
        app:layout_constraintRight_toLeftOf="@id/btnChangeFingerprint"
        app:layout_constraintTop_toBottomOf="@+id/btnTestBehavior" />

    <Button
        android:id="@+id/btnChangeFingerprint"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/btnTestFingerprint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestFingerprint" />

    <TextView
        android:id="@+id/txtPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Picture"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnTestPicture"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestPicture" />

    <Button
        android:id="@+id/btnTestPicture"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
        app:layout_constraintRight_toLeftOf="@id/btnChangePicture"
        app:layout_constraintTop_toBottomOf="@+id/btnTestFingerprint" />

    <Button
        android:id="@+id/btnChangePicture"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/btnTestPicture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTestPicture" />


</android.support.constraint.ConstraintLayout>